--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio | Stevie Marsh</title>
+    <title>Portfolio | Stephen Marsh</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     
+    <!-- NAVBAR -->
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
             <div class="container">
-                <a id="logo" class="navbar-brand text-center" href="#">Stevie Marsh</a>
+                <a id="logo" class="navbar-brand text-center" href="#">Stephen Marsh</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -32,6 +33,62 @@
             </div>
     </nav>
 
+
+    <!-- Portfolio Main Section -->
+    <div id="main-container" class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>Portfolio</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 work">
+                <img src="assets/images/technics-q-c-640-480-1.jpg" class="auth-image" alt="Word Guess" width="100%">
+
+                <h3>Word Guess</h3>
+            </div>
+            <div class="col-md-4 work">
+                <img src="assets/images/technics-q-c-640-480-2.jpg" class="auth-image" alt="RPG Game" width="100%">
+
+                <h3>RPG Game</h3>
+            </div>
+            <div class="col-md-4 work">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 work">
+                <img src="assets/images/technics-q-c-640-480-5.jpg" class="auth-image" alt="Trivia Game" width="100%">
+
+                <h3>Trivia Game</h3>
+            </div>
+            <div class="col-md-4 work">
+                <img src="assets/images/technics-q-c-640-480-7.jpg" class="auth-image" alt="Rutgers Info Widget" width="100%">
+
+                <h3>Rutgers Info Widget</h3>
+            </div>
+            <div class="col-md-4 work">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 work">
+                <img src="assets/images/technics-q-c-640-480-9.jpg" class="auth-image" alt="Rock Paper Scissors" width="100%">
+
+                <h3>Rock Paper Scissors</h3>
+            </div>
+            <div class="col-md-4 work">
+            </div>
+            <div class="col-md-4 work">
+            </div>
+        </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="container-fluid text-center">
+            Copyright &copy;Stephen Marsh
+        </div>
+    </footer>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
 </body>
