--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,36 @@
     </nav>
 
 
+    <!-- Contact Main Section -->
+    <div id="main-container" class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>Contact</h1>
+            </div>
+        </div>
+        <div class "row">
+            <div class="col-sm-12">
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Your Name Here">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="email@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="Message">Message</label>
+                        <textarea class="form-control" id="Message" name="Message" rows="6"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+        
 
 
     <!-- FOOTER -->
