--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,7 @@
 
 
     <!-- Portfolio Main Section -->
+    <!-- Small width looks weird, one group of 3, then group of 2-->
     <div id="main-container" class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -42,33 +43,38 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 work">
+            <div class="col-md-4 col-sm-6 work">
                 <img src="assets/images/technics-q-c-640-480-1.jpg" class="auth-image" alt="Word Guess" width="100%">
 
                 <h3>Word Guess</h3>
             </div>
-            <div class="col-md-4 work">
+            <div class="col-md-4 col-sm-6 work">
                 <img src="assets/images/technics-q-c-640-480-2.jpg" class="auth-image" alt="RPG Game" width="100%">
 
                 <h3>RPG Game</h3>
             </div>
-            <div class="col-md-4 work">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 work">
+            <div class="col-md-4 col-sm-6 work">
                 <img src="assets/images/technics-q-c-640-480-5.jpg" class="auth-image" alt="Trivia Game" width="100%">
 
                 <h3>Trivia Game</h3>
             </div>
-            <div class="col-md-4 work">
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-6 work">
                 <img src="assets/images/technics-q-c-640-480-7.jpg" class="auth-image" alt="Rutgers Info Widget" width="100%">
 
                 <h3>Rutgers Info Widget</h3>
             </div>
-            <div class="col-md-4 work">
+            <div class="col-md-4 col-sm-6 work">
+                <img src="assets/images/technics-q-c-640-480-9.jpg" class="auth-image" alt="Rock Paper Scissors" width="100%">
+
+                <h3>Rock Paper Scissors</h3>
+            </div>
+            <div class="col-md-4 col-sm-6 work">
             </div>
         </div>
+        
+        <!-- Extra row, leaving out for now
         <div class="row">
             <div class="col-md-4 work">
                 <img src="assets/images/technics-q-c-640-480-9.jpg" class="auth-image" alt="Rock Paper Scissors" width="100%">
@@ -80,7 +86,9 @@
             <div class="col-md-4 work">
             </div>
         </div>
+        -->
     </div>
+        
 
     <!-- FOOTER -->
     <footer>
