Minor comment change to trigger GHPages

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <!-- About Me Main Section -->
+    <!-- ABOUT ME MAIN SECTION -->
     <div id="main-container" class="container">
         <div class="row">
             <div class="col-sm-12">
