--- a/contact.html
+++ b/contact.html
@@ -41,20 +41,20 @@
                 <h1>Contact</h1>
             </div>
         </div>
-        <div class "row">
+        <div class="row">
             <div class="col-sm-12">
                 <form>
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Your Name Here">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Your Name Here" required="required">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="email@example.com">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="email@example.com" required="required">
                     </div>
                     <div class="form-group">
                         <label for="Message">Message</label>
-                        <textarea class="form-control" id="Message" name="Message" rows="6"></textarea>
+                        <textarea class="form-control" id="Message" name="Message" rows="6" required="required"></textarea>
                     </div>
                     <div class="form-group">
                         <input type="submit">
