--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <!-- NAVBAR -->
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
             <div class="container">
-                <a id="logo" class="navbar-brand text-center" href="#">Stephen Marsh</a>
+                <a id="logo" class="navbar-brand text-center">Stephen Marsh</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
