updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,31 +44,41 @@
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-6 work">
-                <img src="assets/images/technics-q-c-640-480-1.jpg" class="auth-image" alt="Word Guess" width="100%">
+                <a href="https://purerange.github.io/Word-Guess-Game/" target="_blank">
+                    <img src="assets/images/doctor-who.jpg" class="auth-image" alt="Word Guess" width="100%">
 
-                <h3>Word Guess</h3>
+                    <h3>Word Guess Game</h3>
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 work">
-                <img src="assets/images/technics-q-c-640-480-2.jpg" class="auth-image" alt="RPG Game" width="100%">
+                <a href="https://purerange.github.io/jQuery-Calculator/" target="_blank">
+                    <img src="assets/images/calculator.png" class="auth-image" alt="jQuery Calculator" width="100%">
 
-                <h3>RPG Game</h3>
+                    <h3>jQuery Calculator</h3>
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 work">
-                <img src="assets/images/technics-q-c-640-480-5.jpg" class="auth-image" alt="Trivia Game" width="100%">
+                <a href="https://purerange.github.io/TriviaGame/" target="_blank">
+                    <img src="assets/images/doctor-who-trivia.jpg" class="auth-image" alt="Trivia Game" width="100%">
 
-                <h3>Trivia Game</h3>
+                    <h3>Trivia Game</h3>
+                </a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-6 work">
-                <img src="assets/images/technics-q-c-640-480-7.jpg" class="auth-image" alt="Rutgers Info Widget" width="100%">
+                <a href="https://purerange.github.io/Solar-System-Simulator/" target="_blank">
+                    <img src="assets/images/solar-system.jpg" class="auth-image" alt="Solar System Simulator" width="100%">
 
-                <h3>Rutgers Info Widget</h3>
+                    <h3>Solar System Simulator</h3>
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 work">
-                <img src="assets/images/technics-q-c-640-480-9.jpg" class="auth-image" alt="Rock Paper Scissors" width="100%">
+                <a href="https://purerange.github.io/Train-Scheduler/" target="_blank">
+                    <img src="assets/images/train-schedule.jpg" class="auth-image" alt="Rock Paper Scissors" width="100%">
 
-                <h3>Rock Paper Scissors</h3>
+                    <h3>Train Scheduler</h3>
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 work">
             </div>
