updated About Me section

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <img src="assets/images/cat.jpg" class="auth-image" alt="Cat Pic" width="100%">
+                <img src="assets/images/avi.jpg" class="auth-image" alt="Cat Pic" width="100%">
             </div>
             <div class="col-md-9">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consecutur euismod. Proin commodo purus vitae sollicitudin consectetur.
+                    Experienced Business Operations Manager with a demonstrated history of working in the computer games industry. Skilled in Analytical Skills, Project Management, Project Accounting, Customer Service, and Microsoft Office.
                 </p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
                 <p>
-                    Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget egestas mauris.
+                    My passion for algorithmic problem solving led me to software design, which is an area in which I strive to have continuous growth.
                 </p>
             </div>
             <div class="col-sm-12">
                 <p>
-                    Suspendisse dictum, arcu at convallis faucibus, quam sapien tincident nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    I currently work in esports but enjoy coding in my free time and am always open to trying new things and exploring new opportunities.
                 </p>
             </div>
         </div>
