fixed file type in avi

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <img src="assets/images/avi.jpg" class="auth-image" alt="Cat Pic" width="100%">
+                <img src="assets/images/avi.JPG" class="auth-image" alt="Social Avi" width="100%">
             </div>
             <div class="col-md-9">
                 <p>
